fix broken css

--- a/src/style.css
+++ b/src/style.css
@@ -435,7 +435,7 @@ p {
 .splide img {
     height: 60vh;
     object-fit: cover;
-    width: 100%;
+    /* width: 100%; */
 }
 
 
